--- a/os/auth/login.html
+++ b/os/auth/login.html
@@ -1,15 +1,26 @@
 <!DOCTYPE html>
 <html lang="ko">
-<head><meta charset="utf-8"><title>로그인 | 루웨인</title></head>
-<body style="text-align:center;font-family:sans-serif;padding:40px;">
-<h2>루웨인 로그인</h2>
-<form onsubmit="event.preventDefault();signIn(email.value,pwd.value)">
-  <input id="email" placeholder="이메일" required><br>
-  <input id="pwd" type="password" placeholder="비밀번호" required><br>
-  <button>로그인</button>
-</form>
-<script type="module">
-import { signIn } from './auth.js';
-</script>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>로그인</title>
+</head>
+
+<body>
+    <h2>로그인</h2>
+
+    <form id="login-form">
+        <label>이메일</label><br>
+        <input type="email" id="email" required><br><br>
+
+        <label>비밀번호</label><br>
+        <input type="password" id="password" required><br><br>
+
+        <button type="submit">로그인</button>
+    </form>
+
+    <p><a href="signup.html">아직 계정이 없나요? 회원가입</a></p>
+
+    <script type="module" src="auth.js"></script>
 </body>
 </html>
