--- a/os/auth/profile.html
+++ b/os/auth/profile.html
@@ -1,17 +1,20 @@
 <!DOCTYPE html>
 <html lang="ko">
-<head><meta charset="utf-8"><title>프로필 | 루웨인</title></head>
-<body style="text-align:center;font-family:sans-serif;padding:40px;">
-<h2>내 정보</h2>
-<div id="info"></div>
-<button onclick="signOut()">로그아웃</button>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>프로필</title>
+</head>
 
-<script type="module">
-import { supabase, signOut } from './auth.js';
-const user = JSON.parse(localStorage.getItem('luwein_user'));
-if (!user) location.href='login.html';
-else document.getElementById('info').innerHTML =
-  `닉네임: ${user.user.user_metadata.nickname}<br>이메일: ${user.user.email}`;
-</script>
+<body>
+    <h2>내 프로필</h2>
+
+    <div id="profile-area">
+        <p id="email"></p>
+    </div>
+
+    <button id="logout-btn">로그아웃</button>
+
+    <script type="module" src="auth.js"></script>
 </body>
 </html>
