--- a/os/auth/signup.html
+++ b/os/auth/signup.html
@@ -1,16 +1,26 @@
 <!DOCTYPE html>
 <html lang="ko">
-<head><meta charset="utf-8"><title>회원가입 | 루웨인</title></head>
-<body style="text-align:center;font-family:sans-serif;padding:40px;">
-<h2>루웨인 회원가입</h2>
-<form onsubmit="event.preventDefault();signUp(email.value,pwd.value,nick.value)">
-  <input id="email" placeholder="이메일" required><br>
-  <input id="pwd" type="password" placeholder="비밀번호" required><br>
-  <input id="nick" placeholder="닉네임" required><br>
-  <button>가입하기</button>
-</form>
-<script type="module">
-import { signUp } from './auth.js';
-</script>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>회원가입</title>
+</head>
+
+<body>
+    <h2>회원가입</h2>
+
+    <form id="signup-form">
+        <label>이메일</label><br>
+        <input type="email" id="email" required><br><br>
+
+        <label>비밀번호</label><br>
+        <input type="password" id="password" required><br><br>
+
+        <button type="submit">회원가입</button>
+    </form>
+
+    <p><a href="login.html">이미 계정이 있나요? 로그인</a></p>
+
+    <script type="module" src="auth.js"></script>
 </body>
 </html>
