--- a/language_of_love/emotional_diary/first_time.html
+++ b/language_of_love/emotional_diary/first_time.html
@@ -1,32 +1,23 @@
 <!DOCTYPE html>
 <html lang="ko">
 <head>
-  <meta charset="UTF-8" />
-  <title>첫 감성일기 | 루웨인</title>
-  <link rel="stylesheet" href="style.css" />
-  <script src="script.js" defer></script>
+  <meta charset="UTF-8">
+  <title>처음 쓰기</title>
+  <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
+  <script src="script.js"></script>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <div id="luwein-header"></div>
 
-  <main>
-    <h1>처음 만나는 감성일기</h1>
-    <form>
-      <textarea placeholder="오늘의 감정을 기록해 보세요..." rows="10"></textarea>
-      <button type="submit">저장하기</button>
-    </form>
-  </main>
+<button onclick="location.href='index.html'">← 홈</button>
 
-  <div id="luwein-footer"></div>
+<h2>오늘의 감정</h2>
+<input id="mood" placeholder="지금 내 감정은…">
 
-  <script>
-    fetch("../../includes/header.html")
-      .then(res => res.text())
-      .then(html => document.getElementById("luwein-header").innerHTML = html);
+<h2>기록</h2>
+<textarea id="text" placeholder="하고 싶은 말…"></textarea>
 
-    fetch("../../includes/footer.html")
-      .then(res => res.text())
-      .then(html => document.getElementById("luwein-footer").innerHTML = html);
-  </script>
+<button onclick="saveNewEntry()">저장하고 다음으로</button>
+
 </body>
 </html>
