--- a/language_of_love/emotional_diary/returning_user.html
+++ b/language_of_love/emotional_diary/returning_user.html
@@ -1,30 +1,23 @@
 <!DOCTYPE html>
 <html lang="ko">
 <head>
-  <meta charset="UTF-8" />
-  <title>이어쓰기 | 감성일기</title>
-  <link rel="stylesheet" href="style.css" />
-  <script src="script.js" defer></script>
+  <meta charset="UTF-8">
+  <title>이어 쓰기</title>
+  <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
+  <script src="script.js"></script>
+  <link rel="stylesheet" href="style.css">
 </head>
-<body>
-  <div id="luwein-header"></div>
+<body onload="loadEntry()">
 
-  <main>
-    <h1>이전 감성일기 이어쓰기</h1>
-    <p>최근 일기 목록을 불러옵니다...</p>
-    <div id="diary-list"></div>
-  </main>
+<button onclick="location.href='index.html'">← 홈</button>
 
-  <div id="luwein-footer"></div>
+<h2>오늘의 감정</h2>
+<input id="mood">
 
-  <script>
-    fetch("../../includes/header.html")
-      .then(res => res.text())
-      .then(html => document.getElementById("luwein-header").innerHTML = html);
+<h2>기록</h2>
+<textarea id="text"></textarea>
 
-    fetch("../../includes/footer.html")
-      .then(res => res.text())
-      .then(html => document.getElementById("luwein-footer").innerHTML = html);
-  </script>
+<button onclick="updateEntry()">저장</button>
+
 </body>
 </html>
