--- a/language_of_reverberation/settings/index.html
+++ b/language_of_reverberation/settings/index.html
@@ -2,206 +2,33 @@
 <html lang="ko">
 <head>
 <meta charset="UTF-8">
-<meta name="viewport" content="width=device-width,initial-scale=1.0">
-<title>기본설정 | Settings</title>
-<style>
-:root{
-  --accent:#6c5b7b;
-  --highlight:#2a9d8f;
-  --bg-light:#ffffff;
-  --bg-dark:#1c1c1c;
-  --text-light:#333;
-  --text-dark:#eee;
-  --font:'Noto Sans KR',sans-serif;
-}
-*{box-sizing:border-box;}
-body{
-  margin:0;
-  font-family:var(--font);
-  background:var(--bg-light);
-  color:var(--text-light);
-  display:flex;
-  flex-direction:column;
-  min-height:100vh;
-}
-header{
-  color:var(--accent);
-  font-weight:800;
-  font-size:1.6rem;
-  text-align:center;
-  padding:18px;
-  border-bottom:2px solid #eee;
-}
-main{
-  flex:1;
-  max-width:700px;
-  margin:0 auto;
-  padding:30px 20px;
-}
-section{
-  background:#fafafa;
-  border:1px solid #eee;
-  border-radius:14px;
-  padding:18px;
-  margin-bottom:16px;
-}
-label{display:block;margin:8px 0 4px;font-weight:600;}
-select,input[type=range]{
-  width:100%;
-  padding:8px;
-  border:1px solid #ddd;
-  border-radius:10px;
-  font-family:inherit;
-}
-.toggle{
-  display:flex;align-items:center;gap:10px;
-}
-button{
-  background:var(--highlight);
-  color:#fff;
-  border:none;
-  border-radius:10px;
-  padding:10px 16px;
-  font-size:1rem;
-  cursor:pointer;
-  margin-top:12px;
-}
-button:hover{opacity:.9;}
-footer{
-  padding:14px;
-  color:#888;
-  border-top:1px solid #eee;
-  font-size:.9rem;
-  text-align:center;
-}
-</style>
-<!-- header.html 의 </head> 바로 위쪽에 추가 -->
-<script src="https://unpkg.com/@supabase/supabase-js@2" defer></script>
-<script type="module" src="/scripts/memory_policies.js" defer></script>
-<link rel="manifest" href="/manifest.json">
-<script>
-if ('serviceWorker' in navigator) {
-  window.addEventListener('load', () => {
-    navigator.serviceWorker.register('/service-worker.js')
-      .then(reg => console.log('ServiceWorker registered:', reg))
-      .catch(err => console.warn('ServiceWorker registration failed:', err));
-  });
-}
-</script>
-
+<title>설정</title>
+<link rel="stylesheet" href="/includes/style.css">
 </head>
 <body>
 
-<header>⚙️ 기본설정 | Settings</header>
+<h1>설정</h1>
 
-<main>
-  <p>나에게 맞는 울림 환경을 설정해보세요. (로컬에 저장됩니다)</p>
+<label>텍스트 크기</label>
+<select id="fontSize">
+  <option value="16px">보통</option>
+  <option value="20px">크게</option>
+</select>
 
-  <section>
-    <h2>🖋 글꼴 & 크기</h2>
-    <label>글꼴 선택</label>
-    <select id="fontSel">
-      <option value="'Noto Sans KR',sans-serif">기본 (Noto Sans KR)</option>
-      <option value="'Nanum Myeongjo',serif">나눔명조</option>
-      <option value="'Pretendard',sans-serif">Pretendard</option>
-    </select>
-
-    <label>글자 크기</label>
-    <input type="range" id="fontSize" min="14" max="22" value="16" />
-  </section>
-
-  <section>
-    <h2>🌗 테마</h2>
-    <div class="toggle">
-      <input type="checkbox" id="darkMode" />
-      <label for="darkMode">다크 모드 사용</label>
-    </div>
-  </section>
-
-  <section>
-    <h2>🔔 알림</h2>
-    <div class="toggle">
-      <input type="checkbox" id="notify" />
-      <label for="notify">활동 알림 받기</label>
-    </div>
-  </section>
-
-  <button id="saveBtn">저장하기</button>
-</main>
-
-<footer>루웨인 언어연구소 · 울림의 언어 © 2025</footer>
+<label>색상 모드</label>
+<select id="theme">
+  <option value="light">라이트 모드</option>
+  <option value="dark">다크 모드</option>
+</select>
 
 <script>
-const fontSel=document.getElementById('fontSel');
-const fontSize=document.getElementById('fontSize');
-const darkMode=document.getElementById('darkMode');
-const notify=document.getElementById('notify');
-const saveBtn=document.getElementById('saveBtn');
-
-function saveSettings(){
-  const set={
-    font:fontSel.value,
-    size:fontSize.value,
-    dark:darkMode.checked,
-    notify:notify.checked
-  };
-  localStorage.setItem('resonance_settings',JSON.stringify(set));
-  applySettings(set);
-  alert('설정이 저장되었습니다.');
-}
-
-function loadSettings(){
-  const data=localStorage.getItem('resonance_settings');
-  if(!data)return;
-  const s=JSON.parse(data);
-  fontSel.value=s.font;
-  fontSize.value=s.size;
-  darkMode.checked=s.dark;
-  notify.checked=s.notify;
-  applySettings(s);
-}
-
-function applySettings(s){
-  document.body.style.fontFamily=s.font;
-  document.body.style.fontSize=s.size+'px';
-  if(s.dark){
-    document.body.style.background='var(--bg-dark)';
-    document.body.style.color='var(--text-dark)';
-  }else{
-    document.body.style.background='var(--bg-light)';
-    document.body.style.color='var(--text-light)';
-  }
-}
-
-saveBtn.addEventListener('click',saveSettings);
-document.addEventListener('DOMContentLoaded',loadSettings);
-</script>
-<!-- ✅ 헤더 -->
-<div id="luwein-header"></div>
-<script>
-(async()=>{
-  const paths=["../includes/header.html","../../includes/header.html","/includes/header.html"];
-  for(const p of paths){
-    try{
-      const r=await fetch(p,{cache:"no-cache"});
-      if(r.ok){document.getElementById("luwein-header").innerHTML=await r.text();return;}
-    }catch(e){}
-  }
-})();
+document.getElementById("fontSize").onchange = e => {
+  localStorage.setItem("reverberation_font", e.target.value);
+};
+document.getElementById("theme").onchange = e => {
+  localStorage.setItem("reverberation_theme", e.target.value);
+};
 </script>
 
-<!-- ✅ 푸터 -->
-<div id="luwein-footer"></div>
-<script>
-(async()=>{
-  const paths=["../includes/footer.html","../../includes/footer.html","/includes/footer.html"];
-  for(const p of paths){
-    try{
-      const r=await fetch(p,{cache:"no-cache"});
-      if(r.ok){document.getElementById("luwein-footer").innerHTML=await r.text();return;}
-    }catch(e){}
-  }
-})();
-</script>
 </body>
 </html>
