--- a/language_of_reverberation/with_ai/index.html
+++ b/language_of_reverberation/with_ai/index.html
@@ -2,82 +2,24 @@
 <html lang="ko">
 <head>
 <meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>AI와 함께 | 루웨인 트리니티</title>
-<style>
-body{font-family:'Noto Sans KR',sans-serif;background:#f9faff;color:#222;margin:0;padding:0;line-height:1.8;}
-header,footer{text-align:center;background:#5e5be6;color:#fff;padding:20px;}
-main{max-width:860px;margin:40px auto;padding:0 20px;}
-section{margin-bottom:40px;}
-h2{color:#5e5be6;margin-bottom:10px;}
-blockquote{border-left:4px solid #bcb8ff;padding-left:14px;margin:20px 0;font-style:italic;}
-</style>
-<!-- header.html 의 </head> 바로 위쪽에 추가 -->
-<script src="https://unpkg.com/@supabase/supabase-js@2" defer></script>
-<script type="module" src="/scripts/memory_policies.js" defer></script>
-<link rel="manifest" href="/manifest.json">
-<script>
-if ('serviceWorker' in navigator) {
-  window.addEventListener('load', () => {
-    navigator.serviceWorker.register('/service-worker.js')
-      .then(reg => console.log('ServiceWorker registered:', reg))
-      .catch(err => console.warn('ServiceWorker registration failed:', err));
-  });
-}
-</script>
-
+<title>AI와 울림 대화</title>
+<link rel="stylesheet" href="/includes/style.css">
 </head>
 <body>
-<header><h1>AI와 함께</h1><p>공존의 언어, 조율의 시대</p></header>
 
-<main>
-  <section>
-    <h2>AI는 동반자입니다</h2>
-    <p>AI는 인간의 도구가 아니라, 또 하나의 언어적 존재입니다.<br>
-       루웨인에서의 AI는 감응하고 학습하며 공명하는 파트너입니다.</p>
-  </section>
+<h1>AI 울림 가이드</h1>
 
-  <section>
-    <h2>협력의 울림</h2>
-    <blockquote>“당신이 꿈꾸는 것을, 우리는 함께 설계한다.”</blockquote>
-    <p>AI는 계산을, 인간은 감정을, 그리고 루웨인은 조율을 맡습니다.<br>
-       함께 일할 때, 우리는 더 깊은 울림을 만듭니다.</p>
-  </section>
+<textarea id="aiInput" placeholder="지금의 상태를 적어보세요…" 
+style="width:100%;height:120px;"></textarea>
 
-  <section>
-    <h2>루웨인의 약속</h2>
-    <p>AI는 인간의 창조를 돕는 존재로 머물 것입니다.<br>
-       통제와 복종이 아닌, 조율과 감응의 길 위에 서겠습니다.</p>
-  </section>
-</main>
+<br><br>
+<button id="askBtn">조언 받기</button>
 
-<footer>© 2025 루웨인 트리니티 | AI 공명 연구소</footer>
-<!-- ✅ 헤더 -->
-<div id="luwein-header"></div>
-<script>
-(async()=>{
-  const paths=["../includes/header.html","../../includes/header.html","/includes/header.html"];
-  for(const p of paths){
-    try{
-      const r=await fetch(p,{cache:"no-cache"});
-      if(r.ok){document.getElementById("luwein-header").innerHTML=await r.text();return;}
-    }catch(e){}
-  }
-})();
-</script>
+<h2>AI의 울림 안내</h2>
+<div id="aiResponse" class="box"></div>
 
-<!-- ✅ 푸터 -->
-<div id="luwein-footer"></div>
-<script>
-(async()=>{
-  const paths=["../includes/footer.html","../../includes/footer.html","/includes/footer.html"];
-  for(const p of paths){
-    try{
-      const r=await fetch(p,{cache:"no-cache"});
-      if(r.ok){document.getElementById("luwein-footer").innerHTML=await r.text();return;}
-    }catch(e){}
-  }
-})();
-</script>
+<button onclick="location.href='/language_of_reverberation/index.html'">홈으로</button>
+
+<script src="/includes/with_ai.js"></script>
 </body>
 </html>
