--- a/language_of_reverberation/resonance_log/index.html
+++ b/language_of_reverberation/resonance_log/index.html
@@ -1,23 +1,32 @@
 <!DOCTYPE html>
 <html lang="ko">
 <head>
-<meta charset="UTF-8" />
+<meta charset="UTF-8">
 <title>울림 일지</title>
-<link rel="stylesheet" href="/includes/style.css" />
 </head>
 <body>
 
 <h1>울림 일지</h1>
 
-<textarea id="logText" placeholder="오늘의 울림 기록..." style="width:100%;height:150px;"></textarea>
-<br>
+<p>
+  하루의 울림을 기록하고 아래 목록에서 확인할 수 있는 공간입니다.
+</p>
+
+<textarea id="logText" style="width:100%;height:150px;" placeholder="오늘의 울림을 작성하세요."></textarea>
+<br><br>
 <button id="writeBtn">기록 저장</button>
 
 <h2>내 일지</h2>
 <ul id="logList"></ul>
 
-<button onclick="location.href='/language_of_reverberation/index.html'">홈으로</button>
+<!-- Supabase -->
+<script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
 
+<!-- 공통 초기화 -->
+<script src="/includes/script_reverb.js"></script>
+
+<!-- 일지 기능 -->
 <script src="/includes/log.js"></script>
+
 </body>
 </html>
