--- a/language_of_reverberation/resonance_exercise/index.html
+++ b/language_of_reverberation/resonance_exercise/index.html
@@ -1,23 +1,31 @@
 <!DOCTYPE html>
 <html lang="ko">
 <head>
-<meta charset="UTF-8" />
+<meta charset="UTF-8">
 <title>울림 연습</title>
-<link rel="stylesheet" href="/includes/style.css" />
 </head>
 <body>
 
 <h1>울림 연습</h1>
 
-<textarea id="exerciseText" placeholder="오늘의 울림을 적어보세요..." style="width:100%;height:200px;"></textarea>
+<p>
+  짧은 울림을 바로 기록하는 연습 공간입니다.
+</p>
 
-<div style="margin-top:15px;">
-  <button id="saveBtn">저장하기</button>
-  <button id="backHome" onclick="location.href='/language_of_reverberation/index.html'">홈으로</button>
-</div>
+<textarea id="exerciseText" style="width:100%;height:180px;" placeholder="오늘의 울림을 짧게 적어보세요."></textarea>
 
+<br><br>
+<button id="saveBtn">저장하기</button>
 <p id="status"></p>
 
+<!-- Supabase -->
+<script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
+
+<!-- 공통 초기화 -->
+<script src="/includes/script_reverb.js"></script>
+
+<!-- 연습 기능 -->
 <script src="/includes/exercise.js"></script>
+
 </body>
 </html>
