--- a/language_of_reverberation/resonance_exercise/index.html
+++ b/language_of_reverberation/resonance_exercise/index.html
@@ -1,31 +1,10 @@
-<!DOCTYPE html>
-<html lang="ko">
-<head>
-<meta charset="UTF-8">
-<title>울림 연습</title>
-</head>
-<body>
+<!-- (기존 내용들 …) -->
 
-<h1>울림 연습</h1>
-
-<p>
-  짧은 울림을 바로 기록하는 연습 공간입니다.
-</p>
-
-<textarea id="exerciseText" style="width:100%;height:180px;" placeholder="오늘의 울림을 짧게 적어보세요."></textarea>
-
-<br><br>
-<button id="saveBtn">저장하기</button>
 <p id="status"></p>
 
-<!-- Supabase -->
+<!-- 여기가 JS 로드 영역 -->
 <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
-
-<!-- 공통 초기화 -->
 <script src="/includes/script_reverb.js"></script>
-
-<!-- 연습 기능 -->
 <script src="/includes/exercise.js"></script>
-
 </body>
 </html>
