--- a/language_of_reverberation/with_ai/index.html
+++ b/language_of_reverberation/with_ai/index.html
@@ -1,25 +1,77 @@
 <!DOCTYPE html>
 <html lang="ko">
 <head>
-<meta charset="UTF-8">
-<title>AI와 울림 대화</title>
-<link rel="stylesheet" href="/includes/style.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>AI와 울림 대화</title>
+
+  <style>
+    body {
+      font-family: sans-serif;
+      margin: 0;
+      padding: 20px;
+      background: #fcfcfc;
+    }
+    header {
+      margin-bottom: 20px;
+      padding-bottom: 10px;
+      border-bottom: 1px solid #ddd;
+    }
+    nav a {
+      margin-right: 12px;
+      text-decoration: none;
+      color: #333;
+      font-weight: 600;
+    }
+    textarea {
+      width: 100%;
+      height: 140px;
+      padding: 12px;
+      font-size: 16px;
+      border-radius: 6px;
+      border: 1px solid #bbb;
+      resize: vertical;
+    }
+    button {
+      margin-top: 12px;
+      padding: 10px 18px;
+      border: none;
+      border-radius: 6px;
+      background: #d9480f;
+      color: white;
+      font-size: 15px;
+      cursor: pointer;
+    }
+    #aiResponse {
+      margin-top: 20px;
+      background: #fff;
+      padding: 15px;
+      border-radius: 6px;
+      border: 1px solid #ddd;
+      min-height: 80px;
+      line-height: 1.6;
+    }
+  </style>
 </head>
+
 <body>
+  <header>
+    <h1>AI와 울림 대화</h1>
+    <nav>
+      <a href="/language_of_reverberation/index.html">홈</a>
+      <a href="/language_of_reverberation/resonance_exercise/index.html">울림 연습</a>
+      <a href="/language_of_reverberation/resonance_log/index.html">울림 일지</a>
+    </nav>
+  </header>
 
-<h1>AI 울림 가이드</h1>
+  <section>
+    <textarea id="aiInput" placeholder="AI에게 물어볼 울림을 적어주세요..."></textarea>
+    <button id="askBtn">AI에게 묻기</button>
 
-<textarea id="aiInput" placeholder="지금의 상태를 적어보세요…" 
-style="width:100%;height:120px;"></textarea>
+    <div id="aiResponse"></div>
+  </section>
 
-<br><br>
-<button id="askBtn">조언 받기</button>
-
-<h2>AI의 울림 안내</h2>
-<div id="aiResponse" class="box"></div>
-
-<button onclick="location.href='/language_of_reverberation/index.html'">홈으로</button>
-
-<script src="/includes/with_ai.js"></script>
+  <!-- 이 페이지는 Supabase 필요 없음 -->
+  <script src="/includes/with_ai.js"></script>
 </body>
 </html>
