--- a/language_of_reverberation/resonance_log/index.html
+++ b/language_of_reverberation/resonance_log/index.html
@@ -1,32 +1,83 @@
 <!DOCTYPE html>
 <html lang="ko">
 <head>
-<meta charset="UTF-8">
-<title>울림 일지</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>울림 일지</title>
+
+  <style>
+    body {
+      font-family: sans-serif;
+      margin: 0;
+      padding: 20px;
+      background: #fafafa;
+    }
+    header {
+      margin-bottom: 20px;
+      padding-bottom: 10px;
+      border-bottom: 1px solid #ddd;
+    }
+    nav a {
+      margin-right: 12px;
+      text-decoration: none;
+      color: #333;
+      font-weight: 600;
+    }
+    textarea {
+      width: 100%;
+      height: 150px;
+      padding: 12px;
+      font-size: 16px;
+      border-radius: 6px;
+      border: 1px solid #ccc;
+      resize: vertical;
+    }
+    button {
+      margin-top: 12px;
+      padding: 10px 18px;
+      border: none;
+      border-radius: 6px;
+      background: #0ca678;
+      color: #fff;
+      font-size: 15px;
+      cursor: pointer;
+    }
+    ul {
+      list-style: none;
+      padding-left: 0;
+      margin-top: 20px;
+    }
+    li {
+      padding: 8px 10px;
+      border-bottom: 1px solid #eee;
+      background: #fff;
+      border-radius: 4px;
+      margin-bottom: 8px;
+      font-size: 15px;
+    }
+  </style>
 </head>
+
 <body>
+  <header>
+    <h1>울림 일지</h1>
+    <nav>
+      <a href="/language_of_reverberation/index.html">홈</a>
+      <a href="/language_of_reverberation/resonance_exercise/index.html">울림 연습</a>
+      <a href="/language_of_reverberation/with_ai/index.html">AI와 대화</a>
+    </nav>
+  </header>
 
-<h1>울림 일지</h1>
+  <section>
+    <textarea id="logText" placeholder="기록을 작성하세요..."></textarea>
+    <button id="writeBtn">기록 저장</button>
 
-<p>
-  하루의 울림을 기록하고 아래 목록에서 확인할 수 있는 공간입니다.
-</p>
+    <ul id="logList"></ul>
+  </section>
 
-<textarea id="logText" style="width:100%;height:150px;" placeholder="오늘의 울림을 작성하세요."></textarea>
-<br><br>
-<button id="writeBtn">기록 저장</button>
-
-<h2>내 일지</h2>
-<ul id="logList"></ul>
-
-<!-- Supabase -->
-<script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
-
-<!-- 공통 초기화 -->
-<script src="/includes/script_reverb.js"></script>
-
-<!-- 일지 기능 -->
-<script src="/includes/log.js"></script>
-
+  <!-- Supabase + 공통 초기화 + 페이지 JS -->
+  <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
+  <script src="/includes/script_reverb.js"></script>
+  <script src="/includes/log.js"></script>
 </body>
 </html>
