--- a/language_of_love/emotional_diary/index.html
+++ b/language_of_love/emotional_diary/index.html
@@ -2,23 +2,17 @@
 <html lang="ko">
 <head>
   <meta charset="UTF-8">
-  <title>감성일기</title>
-  <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
-  <script src="script.js"></script>
+  <title>Emotional Diary</title>
   <link rel="stylesheet" href="style.css">
 </head>
-<body onload="checkAuth()">
+<body>
 
-<h1>감성일기</h1>
+  <h1>감정 일기</h1>
 
-<div id="login-warning">
-  <p>로그인 후 사용 가능합니다.</p>
-</div>
+  <ul id="diariesList"></ul>
 
-<div id="write-buttons" style="display:none;">
-  <button onclick="location.href='first_time.html'">처음 쓰기</button>
-  <button onclick="location.href='returning_user.html'">이어 쓰기</button>
-</div>
-
+  <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
+  <script src="/includes/script_reverb.js"></script>
+  <script src="script.js"></script>
 </body>
 </html>
