--- a/language_of_love/the_warmth_of_words/index.html
+++ b/language_of_love/the_warmth_of_words/index.html
@@ -1,133 +1,73 @@
 <!DOCTYPE html>
 <html lang="ko">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>말의 온도 | 루웨인 트리니티</title>
-
-  <!-- 🔹 style.css 자동 로드 -->
-  <script>
-    const cssCandidates = [
-      "style.css", "./style.css", "../style.css",
-      "css/style.css", "../css/style.css", "assets/style.css"
-    ];
-    const head = document.getElementsByTagName("head")[0];
-    const link = document.createElement("link");
-    link.rel = "stylesheet";
-    (function tryLoad(i = 0) {
-      if (i >= cssCandidates.length) {
-        console.warn("❌ style.css를 찾지 못했습니다. 기본 스타일 적용합니다.");
-        const fallback = document.createElement("style");
-        fallback.textContent = `
-          body {
-            background: linear-gradient(to bottom, #fffaf5, #fff);
-            color: #333;
-            font-family: 'Pretendard', sans-serif;
-            line-height: 1.8;
-            margin: 0;
-            padding: 0;
-            transition: all .3s ease;
-          }
-          h1, h2 { color: #5b3924; }
-          button {
-            background-color: #f7c9a9;
-            border: none;
-            border-radius: 10px;
-            padding: 10px 20px;
-            cursor: pointer;
-            font-size: 1em;
-            margin-top: 8px;
-          }
-          button:hover { background-color: #f5b58b; }
-          section {
-            max-width: 720px;
-            margin: 0 auto;
-            padding: 24px;
-          }
-        `;
-        head.appendChild(fallback);
-        return;
-      }
-      link.href = cssCandidates[i];
-      link.onload = () => console.log("✅ CSS 로드 성공:", link.href);
-      link.onerror = () => tryLoad(i + 1);
-      head.appendChild(link);
-    })();
-  </script>
+  <meta charset="UTF-8">
+  <title>말의 온도 | 사랑의 언어</title>
+  <link rel="stylesheet" href="../style/main.css">
+  <link rel="stylesheet" href="style.css">
 </head>
-
 <body>
-  <!-- ✅ 헤더 -->
-  <div id="luwein-header"></div>
-  <script>
-    fetch("/includes/header.html")
-      .then(res => res.text())
-      .then(data => {
-        document.getElementById("luwein-header").innerHTML = data;
-      })
-      .catch(() => console.warn("header.html을 불러오지 못했습니다."));
-  </script>
 
-  <!-- ✅ 메인 콘텐츠 -->
-  <main class="content">
-    <section>
-      <h1>말의 온도</h1>
-      <p>말은 온도를 지닌다. 차가운 말은 마음을 얼게 하고, 따뜻한 말은 관계를 녹인다.</p>
-    </section>
+<header>
+  <h1>말의 온도</h1>
+  <p class="subtitle">
+    관계를 이루는 것은 결국 '표현의 온도'입니다.<br>
+    따뜻하게 말한다고 해서 무조건 상대에게 따뜻하게 닿는 것이 아니고,<br>
+    차갑게 말한 것이 항상 상처가 되어서 돌아오는 것도 아닙니다.<br><br>
+    **여기서는 내가 사용하는 말이 어떤 온도로 전달될지<br>
+    잠시 멈추고 바라보는 연습을 합니다.**
+  </p>
+</header>
 
-    <section>
-      <h2>1. 말의 무게</h2>
-      <p>말은 가볍게 흘러가는 듯하지만, 듣는 이의 마음엔 오래 남는다.</p>
-    </section>
+<main>
 
-    <section>
-      <h2>2. 말의 향기</h2>
-      <p>말은 보이지 않지만 향기로 기억된다. 사람의 온기와 함께 스며든다.</p>
-    </section>
+  <!-- 설명 영역 -->
+  <section class="guide">
+    <h2>왜 말에도 온도가 있을까?</h2>
+    <p>
+      말은 문자로 보이지만 실제로는 감정, 의도, 속도, 거리감이 함께 움직입니다.<br>
+      같은 문장이라도 <em>누가</em> <em>언제</em> <em>어떤 맥락에서</em> 말하느냐에 따라
+      온도는 크게 달라집니다.<br><br>
+      이 작은 도구는 이를 ‘수치화’하기 위해 만들어진 것이 아니라,<br>
+      **말을 한 번 더 다듬게 만드는 작은 멈춤 장치**입니다.
+    </p>
 
-    <section>
-      <h2>3. 말의 색</h2>
-      <p>어떤 말은 푸르고, 어떤 말은 붉다. 그 색은 말하는 이의 마음에서 비친다.</p>
-    </section>
+    <h3>온도가 너무 높다고 좋은 건 아니고, 낮다고 나쁜 것도 아닙니다.</h3>
+    <p>
+      - 80℃ 이상의 말은 따뜻하지만 때때로 ‘부담’이 될 수도 있습니다.<br>
+      - 50~70℃는 안정적인 관계의 대화에서 가장 자주 등장합니다.<br>
+      - 30℃ 이하라고 해서 공격적인 건 아닐 수 있습니다. 단지 ‘거리 유지’일 뿐입니다.<br><br>
+      중요한 것은 **내가 의도한 바**와 **상대가 느끼는 바**가 연결되는지입니다.
+    </p>
+  </section>
 
-    <section>
-      <h2>4. 언어의 치유력</h2>
-      <p>상처를 남기는 것도, 치유하는 것도 결국 말이다.</p>
-    </section>
+  <!-- 입력 영역 -->
+  <section id="input-section">
+    <h2>내 말, 지금 몇 도일까?</h2>
+    <textarea id="warmth-text" rows="4"
+      placeholder="상대에게 보내고 싶은 말, 혹은 실제로 했던 말을 적어보세요."></textarea>
 
-    <!-- ✅ 5. 말의 온도 테스트 복원 -->
-    <section id="temperature-test">
-      <h2>5. 말의 온도 테스트</h2>
-      <p>지금 당신의 말은 어떤 온도에 가까울까요?</p>
-      <button onclick="startTest()">테스트 시작</button>
-      <div id="testResult" style="margin-top:20px; font-weight:bold;"></div>
-    </section>
+    <button id="check-btn">온도 계산 + 기록 저장</button>
 
-    <script>
-      function startTest() {
-        const temps = ["차가움", "중립", "따뜻함"];
-        const colors = {
-          "차가움": "#4a6fa5",
-          "중립": "#888",
-          "따뜻함": "#f68b57"
-        };
-        const result = temps[Math.floor(Math.random() * temps.length)];
-        const div = document.getElementById("testResult");
-        div.innerText = `오늘 당신의 말의 온도는 "${result}" 입니다.`;
-        div.style.color = colors[result];
-      }
-    </script>
-  </main>
+    <p id="warmth-result"></p>
+  </section>
 
-  <!-- ✅ 푸터 -->
-  <div id="luwein-footer"></div>
-  <script>
-    fetch("/includes/footer.html")
-      .then(res => res.text())
-      .then(data => {
-        document.getElementById("luwein-footer").innerHTML = data;
-      })
-      .catch(() => console.warn("footer.html을 불러오지 못했습니다."));
-  </script>
+  <!-- 기록 -->
+  <section id="history-section">
+    <h2>내가 남긴 말의 온도 기록</h2>
+    <p class="guide-small">
+      말은 시간이 지나며 패턴을 만듭니다.<br>
+      어떤 말에선 온도가 높고, 어떤 말에선 자주 낮게 나오는지 살펴보면<br>
+      관계에서 내가 자주 쓰는 표현 습관을 파악할 수 있습니다.
+    </p>
+    <ul id="warmth-list"></ul>
+  </section>
+
+</main>
+
+<script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
+<script src="/includes/script_reverb.js"></script>
+<script src="warmth.js"></script>
+
 </body>
 </html>
