--- a/language_of_love/emotional_diary/index.html
+++ b/language_of_love/emotional_diary/index.html
@@ -2,12 +2,12 @@
 <html lang="ko">
 <head>
   <meta charset="UTF-8">
-  <title>Emotional Diary</title>
+  <title>감성일기 Emotional Diary</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
-  <h1>감정 일기</h1>
+  <h1>감성일기</h1>
 
   <ul id="diariesList"></ul>
 
